VEGA-2445 Dark mode fixes for inputs, warning and inset text #minor (#523)
* Warning and inset text colour fix

* Fix input, select etc. outlines in dark mode

* Make CSS selectors more discriminating

--- a/web/assets/dark.scss
+++ b/web/assets/dark.scss
@@ -91,6 +91,12 @@ $sirius-bg-color: #29292e;
     color: govuk-colour("white");
   }
 
+  .govuk-input,
+  .govuk-textarea,
+  .govuk-select {
+    border-color: govuk-colour("white");
+  }
+
   .moj-pagination__link::before,
   .moj-pagination__link::after {
     filter: invert(100%);
@@ -173,5 +179,10 @@ $sirius-bg-color: #29292e;
     [data-svg-elt="tick"] {
       fill: govuk-colour("white");
     }
+  }
+
+  .govuk-inset-text,
+  .govuk-warning-text .govuk-warning-text__text {
+    color: govuk-colour("white") !important;
   }
 }
